# re2g

./: .gitignore  Dockerfile  Makefile  README.md  logging.yaml  pyproject.toml  requirements.txt  train.py
analyzers/: ctx_len_hist.py  param_count.py
directories/: __init__.py
re2g/: __init__.py
re2g/configs/: __init__.py
re2g/datasets/: __init__.py  v1.py
re2g/losses/: __init__.py
re2g/models/: __init__.py  dpr.py  rerank.py
tests/: conftest.py
tests/data_modules/: test_dpr_data_module.py  test_rerank_data_module.py
tests/datasets/: test_dpr_dataset.py  test_klue_dataset.py  test_rerank_dataset.py
